@@ -57,7 +57,8 @@ endif
 INSTALL_LIBDIR=$(DESTDIR)$(LIBDIR)
 
 install::
-	cp stdlib.cma std_exit.cmo *.cmi *.mli *.ml camlheader_ur \
+	cp stdlib.cma std_exit.cmo *.cmi *.cmt *.cmti *.mli *.ml \
+          camlheader_ur \
 	  $(INSTALL_LIBDIR)
 	cp target_camlheader $(INSTALL_LIBDIR)/camlheader
 
